[package]
name = "waved"
version = "0.1.0"
description = "Fast, modal wave editor"
authors = ["Joel Robichaud <robichaud.jo@gmail.com>"]
edition = "2018"

[package.metadata.bundle]
identifier = "com.joelrobichaud.waved"
copyright = "Copyright (c) Joel Robichaud 2019. All rights reserved."
resources = ["resources"]

[features]
live-reload = []
default = []

[dependencies]
libloading = "0.5"
gl = "0.10.0"
glfw = "0.26.0"
nfd = "0.0.4"
clap = "2.32.0"
portaudio = "0.7.0"

[dependencies.waved-state]
path = "waved-state"
