[package]
name = "waved"
version = "0.1.0"
description = "Fast, modal wave editor"
authors = ["Joel Robichaud <robichaud.jo@gmail.com>"]
edition = "2018"

[package.metadata.bundle]
identifier = "com.joelrobichaud.waved"
copyright = "Copyright (c) Joel Robichaud 2019. All rights reserved."
resources = ["resources"]

[features]
live-reload = []
default = []

[dependencies]
libloading = "0.6"
gl = "0.14.0"
glfw = "0.37.0"
nfd = "0.0.4"
clap = "2.33.0"
cpal = "0.11.0"
ringbuf = "0.2.1"

[dependencies.waved-core]
path = "waved-core"

[dependencies.waved-sndfile]
path = "waved-sndfile"
